<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp">

        <Button
            android:id="@+id/sign_up_button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_back"
            app:iconSize="32dp"

            style="@style/Widget.Material3.Button.IconButton"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/sign_up_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:text="@string/sign_up_text_title"
            android:textSize="42sp"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/purple"

            app:layout_constraintTop_toBottomOf="@id/sign_up_button_back"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/sign_up_text_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:text="@string/sign_up_text_username"
            android:textSize="15sp"
            android:fontFamily="@font/open_sans_regular"

            app:layout_constraintTop_toBottomOf="@id/sign_up_text_title"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_text_input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTextInputLayout"

            app:layout_constraintTop_toBottomOf="@id/sign_up_text_username">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/sign_up_text_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:text="@string/sign_up_text_email"
            android:textSize="15sp"
            android:fontFamily="@font/open_sans_regular"

            app:layout_constraintTop_toBottomOf="@id/sign_up_text_input_username"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_text_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            style="@style/AppTextInputLayout"

            app:layout_constraintTop_toBottomOf="@id/sign_up_text_email_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:hint="@string/sign_up_hint_input_email"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/sign_up_text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:text="@string/sign_up_text_password"
            android:textSize="15sp"
            android:fontFamily="@font/open_sans_regular"

            app:layout_constraintTop_toBottomOf="@id/sign_up_text_input_email"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:endIconMode="password_toggle"
            style="@style/AppTextInputLayout"

            app:layout_constraintTop_toBottomOf="@id/sign_up_text_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/sign_up_hint_input_password"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/sign_up_button_register"
            style="@style/AppButton.Filled"

            app:layout_constraintTop_toBottomOf="@id/sign_up_text_input_password"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/img_town_bg"
        android:layout_gravity="bottom"

        app:layout_constraintBottom_toBottomOf="parent"
        />
</FrameLayout>